Source/WebCore/inspector/front-end/inspector.js
@@ -570,10 +570,19 @@ var windowLoaded = function()
 
 window.addEventListener("DOMContentLoaded", windowLoaded, false);
 
+// We'd like to enforce asynchronous interaction between the inspector controller and the frontend.
+// It is needed to prevent re-entering the backend code.
+// Also, native dispatches do not guarantee setTimeouts to be serialized, so we
+// enforce serialization using 'messagesToDispatch' queue. It is also important that JSC debugger
+// tests require that each command was dispatch within individual timeout callback, so we don't batch them.
+
+var messagesToDispatch = [];
+
 WebInspector.dispatch = function(message) {
-    // We'd like to enforce asynchronous interaction between the inspector controller and the frontend.
-    // This is important to LayoutTests.
-    setTimeout(InspectorBackend.dispatch.bind(InspectorBackend), 0, message);
+    messagesToDispatch.push(message);
+    setTimeout(function() {
+        InspectorBackend.dispatch(messagesToDispatch.shift());
+    }, 0);
 }
 
 WebInspector.dispatchMessageFromBackend = function(messageObject)
